# PF-project

./: .gitignore  CMakeLists.txt  README.md  Relazione.MD
cfg/: particleSimulator.cfg
data/: analyse_exit.c
include/: application.hpp  dataStructures.hpp  graphics.hpp  io.hpp  math.hpp  menu.hpp  particleGenerator.hpp  statistics.hpp  traiettoria.hpp  trajectory.hpp  typeAlias.hpp  type_alias.hpp
src/: application.cpp  dataStructures.cpp  graphics.cpp  io.cpp  main.cpp  math.cpp  menu.cpp  particleGenerator.cpp  statistics.cpp  traiettoria.cpp  trajectory.cpp
test/: generator.test.cpp  graphics.test.cpp  statistics.test.cpp  traiettoria.test.cpp
